# Personal-AI-Employee-Hackathon-0

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  ODOO_SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
AI_Employee_Vault/: Company_Handbook.md
AI_Employee_Vault/.obsidian/: workspace.json
ai-dashboard/: package-lock.json  package.json
ai-dashboard/app/: page.tsx
src/: api_server.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_mcp_server.py  mcp_server.py  ollama_agent.py  orchestrator.py
src/mcp/: email_mcp_server.py  linkedin_mcp_server.py  odoo_mcp_server.py
src/prompts/: accounting_rules.md  email_rules.md  linkedin_rules.md
src/skills/: accounting_drafter.py  dashboard_manager.py  email_drafter.py  linkedin_drafter.py  mcp_executor.py  ralph_wiggum_loop.py
src/watchers/: filesystem_watcher.py  gmail_watcher.py  odoo_watcher.py
